@@ -44,6 +44,10 @@ import javax.swing.UIManager;
 import javax.swing.tree.DefaultMutableTreeNode;
 import com.incors.plaf.kunststoff.KunststoffLookAndFeel;
 import com.incors.plaf.kunststoff.mini.KunststoffMiniLookAndFeel;
+import com.jgoodies.plaf.windows.ExtWindowsLookAndFeel;
+import com.jgoodies.plaf.plastic.PlasticLookAndFeel;
+import com.jgoodies.plaf.plastic.Plastic3DLookAndFeel;
+import com.jgoodies.plaf.plastic.PlasticXPLookAndFeel;
 import org.vrjuggler.tweek.beans.*;
 import org.vrjuggler.tweek.beans.loader.BeanInstantiationException;
 import org.vrjuggler.tweek.gui.TweekFrame;
@@ -409,6 +413,15 @@ public class TweekCore
 
       // This class installs itself with the UI Manager automatically.
       new net.sourceforge.mlf.metouia.MetouiaLookAndFeel();
+
+      UIManager.installLookAndFeel("JGoodies Windows",
+                                   ExtWindowsLookAndFeel.class.getName());
+      UIManager.installLookAndFeel("JGoodies Plastic",
+                                   PlasticLookAndFeel.class.getName());
+      UIManager.installLookAndFeel("JGoodies Plastic 3D",
+                                   Plastic3DLookAndFeel.class.getName());
+      UIManager.installLookAndFeel("JGoodies Plastic XP",
+                                   PlasticXPLookAndFeel.class.getName());
 
       try
       {
